hphp/test/zend/good/tests/classes/interface_method_private.php.expectf

Fatal error: Interface methods must be public or protected and cannot be private in %s/interface_method_private.php on line 3
